# Memoria

./: .env.example  .gitignore  AGENTS.md  README.md  design-tokens.json  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
.codex/environments/: environment.toml
android/: README.md  gradlew  settings.gradle
android/app/: build.gradle
docs/: AI_CLASSIFICATION_BOUNDARY_OPTIMIZATION.md  AI_CLASSIFICATION_TECH_REPORT.md  AI_CONTRACT.md  AI_SCHEMA_OPTIMIZATION_EXECUTABLE_REPORT.md  CODEX_AUDIT.md  DESIGN_SYSTEM.md  MACOS_MANUAL_QA.md  MEMORIA_MACOS_CODEX_MASTER_SPEC.md  MEMORY_PROTOCOL.md  NATIVE_V1_SCOPE.md  REVIEW_INBOX_QA.md  account-sync-mainland-server.md  deepseek-api-interface.md  file-import-pipeline.md  native-companion-scope.md  project-overview.md
docs/schemas/: extract-memory.canonical.v1.1.schema.json  extract-memory.generation.v1.1.schema.json
ios/: Package.swift  README.md
ios/Memoria/: CalendarView.swift  DashboardView.swift  DemoData.swift  DesignSystem.swift  FilesView.swift  InboxView.swift  LocalAI.swift  LocalSQLiteStore.swift  MemoriaApp.swift  Models.swift  NativeAppStore.swift  PeopleView.swift  RelationshipMapView.swift  RootView.swift  SearchView.swift  SecureAPIKeyStore.swift  (+1 more)
macos/: Package.swift  README.md
prisma/: schema.prisma
script/: build_and_run.sh  build_android.sh  package_macos_release.sh
windows/: package.json  vite.config.ts
windows/src-tauri/: Cargo.toml  tauri.conf.json
windows/src-tauri/capabilities/: default.json
windows/src-tauri/src/: lib.rs  main.rs
(+151 files in other folders)
